Fixing Accordion expanded and collapsed images.

--- a/accordion.less
+++ b/accordion.less
@@ -62,6 +62,10 @@
 	margin-top: 5px;
 }
 
+.d2l-accordion-toggle-icon {
+	margin: 7px;
+}
+
 .d2l-accordion-header-active > .d2l-accordion-toggle,
 .d2l-accordion-header:hover > .d2l-accordion-toggle {
 	background-color: #fafafa;
